# Qt--AI-Wordpet-

./: .gitignore  51-作业报告.docx  EnglishWordsApp.spec  README.md  main.py  memory.md  prompt.md  requirements.txt  ts.py  words.py
QT大作业实验/: CMakeLists.txt  SPEC.md
QT大作业实验/include/: clipboardmonitor.h  database.h  dictapi.h  petwindow.h  vocabularywindow.h
QT大作业实验/src/: clipboardmonitor.cpp  database.cpp  dictapi.cpp  main.cpp  petwindow.cpp  vocabularywindow.cpp
Qt--AI-Wordpet--master -plus/Qt--AI-Wordpet--master/: SPEC.md
Qt--AI-Wordpet--master -plus/Qt--AI-Wordpet--master/src/: database.py  learning_window.py  notification_window.py  pet_window.py  vocabulary_window.py
Qt--AI-Wordpet--master -plus/Qt--AI-Wordpet--master/src/data/: wordpet.db
asset/: mambo.m4a
src/: audio_player.py  clipboard_monitor.py  database.py  dict_api.py  hotkey_manager.py  learning_window.py  main.py  pet_window.py  review_window.py  vocabulary_window.py  word_card_renderer.py  words.py
src/data/: wordpet.db
tests/: __init__.py  conftest.py  smoke_test.py  test_flashcard.py  test_migration.py  test_notebook_bus.py  test_word_card_renderer.py
